syntax = "proto3";

package two_choices;

option go_package = "./;gen_grpc";

import "common.proto";

// ユーザが質問を操作するサービス
service UserQuestionService {
  rpc Echo (UserQuestion.EchoRequest) returns (UserQuestion.EchoResponse); // 疎通確認
  rpc GetRandom (Empty) returns (UserQuestion.GetRandomResponse); // 質問ランダム取得
  rpc Update (UserQuestion.UpdateRequest) returns (Empty); // 質問更新
}

// 質問
message UserQuestion {
  // 疎通確認リクエスト
  message EchoRequest {
    string msg = 1;
  }

  // 疎通確認レスポンス
  message EchoResponse {
    string msg = 2;
  }
  
  // 質問ランダム取得レスポンス
  message GetRandomResponse {
    uint64 id = 1;
    string title = 2;
    string first_answer = 3;
    string second_answer = 4;
    uint64 first_count = 5;
    uint64 second_count = 6;
    string first_img_url = 7;
    string second_img_url = 8;
  }

  // 質問更新リクエスト
  message UpdateRequest {
    uint64 id = 1;
    bool is_first_selected = 2;
  }
}